# LogikaPython

./: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  test.py
Logika/: ECommException.py  FLZ.py  LogLevel.py
Logika/Connections/: Connection.py  NetConnection.py  OfflineConnection.py  SerialConnection.py  SerialPortConnection.py  TCPConnection.py  UDPConnection.py  UDPConnectionXamarin.py
Logika/Meters/: Archive.py  ArchiveDef.py  ArchiveField.py  ArchiveFieldDef.py  Channel.py  DataTag.py  ItemDefBase.py  Logika4.py  Logika6.py  Meter.py  RDayHour.py  StandardVars.py  Tag.py  TagDef.py  Types.py
Logika/Meters/4L/: Logika4L.py  SPG741.py  SPT941.py  SPT941_10.py  SPT942.py  SPT943.py
Logika/Meters/4M/: LGK410.py  Logika4M.py  SPG740.py  SPG742.py  SPT940.py  SPT941_20.py  SPT943rev3.py  SPT944.py
Logika/Meters/6/: SPE542.py  SPG763.py
Logika/Meters/6N/: SPE543.py  SPG761_3.py  SPG762_1.py  SPG763_1.py  SPT961_1.py  SPT961_1M.py  SPT963.py
Logika/Meters/__4L/: Logika4L.py  SPG741.py  SPT941.py  SPT941_10.py  SPT942.py  SPT943.py
Logika/Meters/__4M/: Logika4M.py  SPG742.py  SPT940.py  SPT944.py
Logika/Meters/__6/: SPG761.py  SPG762.py  SPT961.py  SPT961M.py
Logika/Meters/__6N/: Logika6N.py  SPG761_1.py  SPT962.py
Logika/Protocols/: Protocol.py
Logika/Protocols/M4/: ErrorCode.py  FlashArchive4L.py  FlashRingBuffer.py  M4ArchiveId.py  M4ArchiveRecord.py  M4Opcode.py  M4Packet.py  M4Protocol.py  M4Protocol_API.py  TagWriteData.py
Logika/Resources/: Logika_database
Logika/Resourses/: db_init.sql
Logika/Utils/: ByteQueue.py  Conversions.py
(+6 files in other folders)
