[metadata]
name = Logika
version = 0.0.2
author = Vadsxd
author_email = vadim.sannikov.2018@mail.ru
description = Logika libs Python Realization
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Vadsxd/LogikaPython/tree/main/Logika
project_urls =
    repository = https://github.com/Vadsxd/LogikaPython
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = Logika
packages = find:
python_requires = >=3.11

[options.packages.find]
where = Logika